-added more images.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <body style="margin: 0; padding: 0">
+  <head>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+  </head>
+  <body style="margin: 0; padding: 0; background: #000000">
     <video
       id="image"
       preload="auto"
@@ -37,17 +40,113 @@
         "https://preview.redd.it/nxd1tuuqra251.gif?format=mp4&s=8c73d1a4f5caa4416dc5228b36dececed14f267f",
         "https://preview.redd.it/pba3mb0rtpw41.gif?format=mp4&s=ebfade2d9183d771d1bc6b9a046feeee41272c89",
         "https://preview.redd.it/zusrb3sxsz211.gif?format=mp4&s=86ee88e5bef70a0fccd4906d8572d21b432488a2",
-        // "",
+        "https://preview.redd.it/0sjhzop5dfm51.gif?format=mp4&s=14276f638489de3ad7fbccb824888d284b173215",
+        "https://preview.redd.it/fagm2fhxv1yz.gif?format=mp4&s=98627514e3ab94dcce2344c7182186f4ac748f79",
+        "https://preview.redd.it/w49wc60kys401.gif?format=mp4&s=76e88cdb00646aa0dce91e38745d3d3f2d6b7dd2",
+        "https://preview.redd.it/tjbtlvwfctp41.gif?format=mp4&s=444551dbeac1c12486b1724867d44c99bb5d65dc",
+        "https://preview.redd.it/1oitevwu69h21.gif?format=mp4&s=be4f671643db7f8e4d88da75048fd52735c8cead",
+        "https://preview.redd.it/dm033hsnjim21.gif?format=mp4&s=fbf34e4c810cc6b670b0aab2d7cc1505d250390d",
+        "https://preview.redd.it/9ccxj0olpan51.gif?format=mp4&s=4ffe485a3b39a3d80a439832930b1485f06fe08c",
+        "https://v.redd.it/okvxt34acb051/DASH_720",
+        "https://preview.redd.it/srf0muikewz11.gif?format=mp4&s=34844d7214223536d817486a8ad09809a708ff47",
+        "https://v.redd.it/6wvezcyw1rt31/DASH_720",
+        "https://preview.redd.it/5i1yfm1m5z161.gif?format=mp4&s=1761144b3d50a691f08f70d14a416a22ef1831f0",
+        "https://preview.redd.it/v153ptoiaww11.gif?format=mp4&s=dda57521eeaebca29630528bc18e19a1c03cd050",
+        "https://preview.redd.it/4xthat6fihi41.gif?format=mp4&s=83619ad5aaa9ff3e7655121f76ddd4ed4ccbe126",
+        "https://preview.redd.it/2smj5mdtemk41.gif?format=mp4&s=d8331482374d23280c418799f05d4ee3c619c6de",
+        "https://preview.redd.it/37s1zi9e29z31.gif?format=mp4&s=934bfb957bf2b613ef092fac3dd92c6ca211208f",
+        "https://preview.redd.it/03i92uehdtx01.gif?format=mp4&s=55a83303a1f5677af245bcabb2a1ca482d38550f",
+        "https://preview.redd.it/12jfmzumk8x41.gif?format=mp4&s=df269035c3fb5d8238b5d4b88d8789c04e963759",
+        "https://preview.redd.it/tpuv7miu8f041.gif?format=mp4&s=e19360aef2294fd302a66fdc905738a4d62e8792",
+        "https://preview.redd.it/0m6j7y65skd51.gif?format=mp4&s=238069cb1e85ec5f1acb8738d85d6053993116aa",
+        "https://v.redd.it/tuxpbbsj7uy51/DASH_720.mp4",
+        "https://media4.giphy.com/media/v2BYsgT9UzYPLJNxZN/giphy.mp4",
+        "https://preview.redd.it/m1lmxpjagcl01.gif?format=mp4&s=d807d9bec0fd77b91a3c8e5e6a8bbe6d35cbe475",
+        "https://preview.redd.it/citzf680lmr41.gif?format=mp4&s=65676223f791cc99ba4e833dea96d7ea1bf63112",
+        "https://preview.redd.it/incm15e255ez.gif?format=mp4&s=8279b1f1bd56d2a5758f1ad061de54f0faf2d999",
+        "https://preview.redd.it/uvmbd6ecn8621.gif?format=mp4&s=ad840f2c540d9e165a0d58a9eea27eefdb3d5cff",
+        "https://preview.redd.it/q6jrkvtenbg21.gif?format=mp4&s=f6706e2e49390e98c5d2c771f6423c04ad5d123e",
+        "https://preview.redd.it/gw165xxmdz201.gif?format=mp4&s=aad4109fa8cff0fbf03b4c79a98a5b85a97a48ec",
+        "https://preview.redd.it/yx6k041apf041.gif?format=mp4&s=21819639a6a357e977d2f29643f5d933ab3abaee",
+        "https://preview.redd.it/fynl063xil821.gif?format=mp4&s=f9e78dd38230beb1a82244d49a7a291efbb957b1",
+        "https://preview.redd.it/93sdwb2y6vk51.gif?format=mp4&s=12f0c908fa6f9b75b1575a8ec35bba0e541e0691",
+        "https://preview.redd.it/4236c360nkg51.gif?format=mp4&s=9d217202273d5e63f8288da6ad58838e1f334089",
+        "https://v.redd.it/3jasklw5u6h51/DASH_720.mp4",
+        "https://preview.redd.it/j4v8vv35yxn51.gif?format=mp4&s=e7dcd5ee8901d0dedda03c554f204112139c1e0b",
+        "https://preview.redd.it/k74leh9ty3161.gif?format=mp4&s=c403fbd36452c545b631b92d348e040076c1cb63",
+        "https://preview.redd.it/3e6jaye34zy31.gif?format=mp4&s=7e961dce8f3d9b612c36049e889c54b48e0ee4cb",
+        "https://preview.redd.it/xasgp4eul2m41.gif?format=mp4&s=a2b0ad9ea7d30f0a42ceb2dd9f0aef4356e46bb8",
+        "https://preview.redd.it/wej9erc6b3w31.gif?format=mp4&s=8d24f22e65be02d29b7309d7f81efb696a3098ed",
+        "https://i.imgur.com/7QsJZ0V.mp4",
+        "https://i.imgur.com/DFkJFBr.mp4",
+        "https://i.imgur.com/kBlPhyo.mp4",
+        "https://preview.redd.it/jb0vb4zh8vo41.gif?format=mp4&s=1584fa3e281a01d5e4c207127e2209f23e31afc3",
+        "https://preview.redd.it/w8g25dmqrs621.gif?format=mp4&s=912230e90f3c934b53c2652b1a31d5c4b7482d88",
+        "https://preview.redd.it/f9na8wk74qn51.gif?format=mp4&s=ab38364af1379abc53c85808ca725feab8f36c22",
+        "https://preview.redd.it/m2rskl049s8z.gif?format=mp4&s=0e8eed380cb23b16e1d0c55958c4b92e43d9423e",
+        "https://preview.redd.it/t3lzhs1a5zv41.gif?format=mp4&s=698ffea37ca8d996605f5bda7526737a2b733f2f",
+        "https://preview.redd.it/r5gh3sxmd8t41.gif?format=mp4&s=d5f1109b1eb05f78f8c27fef53a2aca24cc65c07",
+        "https://preview.redd.it/i9arx2391qy41.gif?format=mp4&s=290f690374157b68e188245504d9a09a93999038",
+        "https://v.redd.it/fn54t5hg9t951/DASH_360",
+        "https://preview.redd.it/f5j0b3te3d131.gif?format=mp4&s=6cf6ce9c2dda078d8258cc983d0a735ccbac54bc",
+        "https://v.redd.it/c1a9mbuo8ns51/DASH_720.mp4",
+        "https://i.imgur.com/LL47pS8.mp4",
+        "https://preview.redd.it/gbfcxak9ycz51.gif?format=mp4&s=6312269db543538c4154d72095532c39847108bf",
+        "https://preview.redd.it/y4g749pj0f141.gif?format=mp4&s=c7eab51a600cf199776743b481081e9d5467c4f9",
+        "https://preview.redd.it/jy6737s7d7i31.gif?format=mp4&s=a6aef004fc23f8ee7b8f8a3f61bb80f879a069fd",
+        "https://v.redd.it/qavyojn63ra41/DASH_720",
+        "https://preview.redd.it/gq2peozp0it41.gif?format=mp4&s=52b5a101cfe28fbc0f05615bf7fc3033d2dc6667",
+        "https://preview.redd.it/6gi6gi575ce41.gif?format=mp4&s=88af04cc4bb9d20a3f7ed9973454a63d3781de05",
+        "https://preview.redd.it/8471k3lz34r31.gif?format=mp4&s=062059ae14a1d049bca7408ef4620bb8ead73a6b",
+        "https://preview.redd.it/wmq060n3jgw51.gif?format=mp4&s=dccd91eddc6f5f2dca425e16086dafc0f9cb7b63",
+        "https://preview.redd.it/mkb83mcbdyiz.gif?format=mp4&s=66f9725a3fb10a867784ae639c6ccd18760f94df",
+        "https://preview.redd.it/fyn0rwvs5n521.gif?format=mp4&s=9032d169b226cefd74daf208423a17f53f2b4034",
+        "https://preview.redd.it/up5hvgtjsgz41.gif?format=mp4&s=e34932c70ce3800e9dfd663cc518bf55182d3559",
+        "https://i.imgur.com/RuZiA5c.mp4",
+        "https://preview.redd.it/jfcnbqxv82t51.gif?format=mp4&s=617908fa30133a33165b9571ecc11b936f7bf7dc",
+        "https://preview.redd.it/vd13vkpb9w251.gif?format=mp4&s=78873c3e7e3f41e452f3ed71cb9255d658596b5b",
+        "https://preview.redd.it/xdk8x7c2ut321.gif?format=mp4&s=a19213412609eb2f982516c5c2587bcdbb9cc6bd",
+        "https://i.imgur.com/H8nhIca.mp4",
+        "https://preview.redd.it/r445nmw80dx41.gif?format=mp4&s=f1699c625f40d55d5a056aedebac3571f5933b10",
+        "https://preview.redd.it/b59gvkzn0dh41.gif?format=mp4&s=9c2f6daed919954194c238c50fa29459ff67981f",
+        "https://preview.redd.it/muejiwu9jba41.gif?format=mp4&s=258d241385d06f6c7a2b686b0d39c7ff350809f9",
+        "https://preview.redd.it/69ycd511sot11.gif?format=mp4&s=f92ad5a25ca7aa4f7963d4a80b0b7c6a35a9d5ce",
+        "https://preview.redd.it/4m7x0p5weff01.gif?format=mp4&s=63042720069ab32ee19e7220655bae351d25972d",
+        "https://v.redd.it/9cfxljfq95n31/DASH_720",
+        "https://v.redd.it/3cwsez1g1lv41/DASH_720",
+        "https://preview.redd.it/2g7qzu3nhkd21.gif?format=mp4&s=b9150c6e7d95cb16d620c48097f740b91a6cc548",
+        "https://v.redd.it/f9uohglnrhx51/DASH_720",
+        "https://preview.redd.it/rant906zid541.gif?format=mp4&s=b4a31b941ec4395c00710f43d53f71f5b5d016f2",
+        "https://v.redd.it/55te47etfmo41/DASH_720",
+        "https://preview.redd.it/jz5d6dsa1y051.gif?format=mp4&s=4afc0f55e386e3ed788579b0cba23c257d7ff277",
+        "https://preview.redd.it/k9vxq3bbmcf41.gif?format=mp4&s=58a2ba2c9349535ed9528389648dca55d673a8ed",
+        "https://preview.redd.it/fyd03yed3o321.gif?format=mp4&s=94e0667169419416d7c7a26bcc9fd3aae293f961",
+        "https://preview.redd.it/k1lsqn4zg5c41.gif?format=mp4&s=107101d0ab3ec8c5527f032328aa9fdf85dca2f4",
+        "https://preview.redd.it/9abnd9nwkml31.gif?format=mp4&s=e9a0b7fa5b915f2da86d7d6d15ab9adad2cc2d45",
+        "https://preview.redd.it/gjh4zyzxida21.gif?format=mp4&s=c76a8d7d096c4d4a036e3e7edbedc8be42a876d0",
+        "https://preview.redd.it/cr8ze3v7b1541.gif?format=mp4&s=d53a7e9d1f25be06bc53ae28d9d17a88b991391a",
+        "https://preview.redd.it/wqbf7xpeked51.gif?format=mp4&s=ffb7d9d1eb5a1d396e4a4598bd27f5ae0b16d3dc",
+        "https://v.redd.it/wj9g1lbez7951/DASH_720",
+        "https://preview.redd.it/75w0oty2c7v51.gif?format=mp4&s=dfc3065dbbc8e28f52cabe739ed889b12b09876f",
+        "https://v.redd.it/cy1s9sozsya41/DASH_720",
+        "https://preview.redd.it/enib7dg8o3921.gif?format=mp4&s=e207472c9d51b80f71754fd5ab1817c29d8f095d",
+        "https://preview.redd.it/gpgo3gcm5p331.gif?format=mp4&s=35258baa28d023ad133fd67905ba21e57115a008",
+        "https://preview.redd.it/prjw0t4gezw41.gif?format=mp4&s=38f303d5fe5c779d2e920a835dc345958cbf7d21",
+        "https://preview.redd.it/yzzf97pzbq151.gif?format=mp4&s=461e874bdc7a1841e920cf1eee8184a8cb197205",
+        "https://preview.redd.it/uvzzne2p90041.gif?width=640&format=mp4&s=aefa11be6184753b38ed6ac33552f7422e512715",
+        "https://i.imgur.com/EuJ49wt.mp4",
+        "https://preview.redd.it/pwk0we8nnk641.gif?format=mp4&s=6095a840ea61c289568863a8ddfea282724001d0",
+        "https://preview.redd.it/4kng88nxfzb41.gif?format=mp4&s=2e19e9f360dc80cdf205de9d4f3810e97bc1ce7f",
+        "https://preview.redd.it/2ym01dxl3zp11.gif?format=mp4&s=48a96fe9b0c0a37d0f5fffe7a5a73b1eefe7857c",
+        "https://v.redd.it/xl4u5vsqrn351/DASH_720",
+        "https://preview.redd.it/jt7p7bxazdw21.gif?format=mp4&s=e79826113f1ebcdd83d06bcc465ce149dd36c231",
         // "",
       ];
-      // var time = 10 * 60 * 1000;
-
-      var time = 5000;
+      var time = 5 * 60 * 1000;
       setInterval(function () {
         var newImageKey = Math.floor(Math.random() * images.length);
         visited.push(newImageKey);
         var curImage = images[newImageKey];
-        console.log(curImage);
         document.getElementById("image").src = curImage;
       }, time);
     }
