--- a/index.html
+++ b/index.html
@@ -142,13 +142,14 @@
         "https://preview.redd.it/jt7p7bxazdw21.gif?format=mp4&s=e79826113f1ebcdd83d06bcc465ce149dd36c231",
         // "",
       ];
-      var time = 5 * 60 * 1000;
-      var newImageKey1 = Math.floor(Math.random() * images.length);
+//       var time = 5 * 60 * 1000; //5 minutes
+      const time = 10000; // 10 seconds
+      const newImageKey1 = Math.floor(Math.random() * images.length);
       visited.push(newImageKey1);
-      var curImage1 = images[newImageKey1];
+      const curImage1 = images[newImageKey1];
       document.getElementById("image").src = curImage1;
       setInterval(function () {
-        var newImageKey = Math.floor(Math.random() * images.length);
+        const newImageKey = Math.floor(Math.random() * images.length);
         visited.push(newImageKey);
         var curImage = images[newImageKey];
         document.getElementById("image").src = curImage;
